--- a/restaurants/Lanoteenchantee.html
+++ b/restaurants/Lanoteenchantee.html
@@ -14,8 +14,207 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/restaurant.css">
+    <link rel="stylesheet" href="../css/headerRestaurant.css">
 </head>
+
+<body>
+    <header>
+        <a class="return-arrow" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
+    </header>
+    <main>
+        <div class="intro__img img__note">
+        </div>
+        <section class="carte">
+            <div class="intro">
+                <div class="intro__title">
+                    <h1>La note enchantée</h1>
+                </div>
+                <div class="menu__heart">
+                    <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+                    <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="menu__all menu__all--1">
+                    <div class="menu__title">
+                        <h2>ENTRÉES</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Ravioles de foie gras</h3>
+                            <p class="truncate">Accompagnées de leur crème à la truffe</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>25€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Caviar osciètre</h3>
+                            <p class="truncate">Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>35€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Homard et espuma de potiron</h3>
+                            <p class="truncate">Marinés aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>20€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Foie gras de canard cuit entier</h3>
+                            <p class="truncate">Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>35€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__all menu__all--2">
+                    <div class="menu__title">
+                        <h2>PLATS</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Noix de coquilles Saint-Jacques</h3>
+                            <p class="truncate">Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>40€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Langoustine poêlée</h3>
+                            <p class="truncate">Purée de patate douce</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>35€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Mijoté de queue de bœuf</h3>
+                            <p class="truncate">Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>44€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__all menu__all--3">
+                    <div class="menu__title">
+                        <h2>DESSERTS</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Macaron noisette et chocolat</h3>
+                            <p class="truncate">Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>18€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Baba au rhum revisité</h3>
+                            <p class="truncate">Avec son coulis de citron</p>
+                        </div>  
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>22€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Tarte au citron meringuée</h3>
+                            <p class="truncate">Déstructurée</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>23€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="order">
+                <a class="link__button" href="#">
+                    Commander
+                </a>
+            </div>
+        </section>
+        <footer>
+            <div class="footer__title">
+                <h1>ohmyfood</h1>
+            </div>
+            <div class="links__all">
+                <div class="footer__links">
+                    <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
+                    <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+                </div>
+                <div class="footer__links">
+                    <a class="footer__link" href="#">Mentions légales</a>
+                    <a class="footer__link" href="mailto:NOMDUMAIL@MAIL.COM">Contact</a>
+                </div>
+            </div>
+        </footer>
+    </main>
+</body>
