--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -26,7 +26,7 @@
         <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <main>
-        <div class="intro__img">
+        <div class="intro__img img__palette">
         </div>
         <section class="carte">
             <div class="intro">
