--- a/restaurants/Ledelicedessens.html
+++ b/restaurants/Ledelicedessens.html
@@ -14,8 +14,193 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/restaurant.css">
+    <link rel="stylesheet" href="../css/headerRestaurant.css">
 </head>
+
+<body>
+    <header>
+        <a class="return-arrow" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
+    </header>
+    <main>
+        <div class="intro__img img__delice">
+        </div>
+        <section class="carte">
+            <div class="intro">
+                <div class="intro__title">
+                    <h1>Le délice des sens</h1>
+                </div>
+                <div class="menu__heart">
+                    <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+                    <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="menu__all menu__all--1">
+                    <div class="menu__title">
+                        <h2>ENTRÉES</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Tartare de thon</h3>
+                            <p class="truncate">Assaisonné au yuzu</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>25€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Bouchée de homard croustillant</h3>
+                            <p class="truncate">Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>35€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Velouté de cèpes</h3>
+                            <p class="truncate">Aux truffes</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>20€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__all menu__all--2">
+                    <div class="menu__title">
+                        <h2>PLATS</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Poulet rôti aux herbes de Provence</h3>
+                            <p class="truncate">Et sa crème de truffe</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>40€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Langouste rôtie</h3>
+                            <p class="truncate">Et ses légumes de saison</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>35€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Côte de bœuf Angus</h3>
+                            <p class="truncate">Et sa purée de panais</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>44€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__all menu__all--3">
+                    <div class="menu__title">
+                        <h2>DESSERTS</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Farandole de desserts</h3>
+                            <p class="truncate">Du chef</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>18€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Crème brulée</h3>
+                            <p class="truncate">Revisitée</p>
+                        </div>  
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>22€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3 class="truncate">Tiramisu</h3>
+                            <p class="truncate">À la noisette</p>
+                        </div>
+                        <div class="menu__animation--validation">
+                            <div class="menu__price">
+                                <p>23€</p>
+                            </div>
+                            <div class="validation">
+                                <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="order">
+                <a class="link__button" href="#">
+                    Commander
+                </a>
+            </div>
+        </section>
+        <footer>
+            <div class="footer__title">
+                <h1>ohmyfood</h1>
+            </div>
+            <div class="links__all">
+                <div class="footer__links">
+                    <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
+                    <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+                </div>
+                <div class="footer__links">
+                    <a class="footer__link" href="#">Mentions légales</a>
+                    <a class="footer__link" href="mailto:NOMDUMAIL@MAIL.COM">Contact</a>
+                </div>
+            </div>
+        </footer>
+    </main>
+</body>
